# mousam

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION_GUIDE.md  README.md  com.github.amit9838.json  com.github.amit9838.json~  com.github.amit9838.weather.json  example.flatpak  index.html  io.github.amit9838.mousam.json  io.github.amit9838.weather.json  io.github.amit9838.weather.json~  meson.build  package-lock.json  rebuild.sh  requirements.txt  run-app  shell.nix  update-po  update-pot
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  snap.yaml  static.yml
assets/: index-B1Y-M7ef.js  index-BHM4e6mB.js  index-BI_ccCzG.js  index-BkS6gs1L.css  index-CFp9Q20l.js  index-CWN9B78t.css  index-CvGlBzRA.css  index-DCG-HZ4k.css  index-DPrzkV28.js  index-L3DSEX7A.js  index-U5Y9Ek8h.css
build-aux/: snapcraft.yaml
data/: com.github.amit9838.appdata.xml.in  com.github.amit9838.desktop.in  com.github.amit9838.gschema.xml  com.github.amit9838.weather.appdata.xml.in  com.github.amit9838.weather.desktop.in  com.github.amit9838.weather.gschema.xml  io.github.amit9838.mousam.appdata.xml.in  io.github.amit9838.mousam.desktop.in  io.github.amit9838.mousam.gschema.xml  io.github.amit9838.weather.appdata.xml.in  io.github.amit9838.weather.desktop.in  io.github.amit9838.weather.gschema.xml  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  mousam.doc-base.ex  postinst  postrm  rules  weather.1
po/: LINGUAS  POTFILES  Weather.pot  cs.po  de.mo  de.po  es.po  fi_FI.po  fr.po  fr_FR.po  hi.po  hu.po  it.po  ko.po  meson.build  mousam.pot  nl.po  pl.po  pt_BR.po  ro.po  ru.po  th.po  tr.po  uk.po  zh.po  zh_CN  zh_CN.po  zh_TW.po
snap/: mousam.patch  snapcraft.yaml
src/: API_AirPollution.py  API_FindCity.py  API_Weather.py  CORE_Models.py  CORE_weatherData.py  Models.py  UI_CardAirPollution.py  UI_CardDayNight.py  UI_CardSquare.py  UI_CompDrawBar.py  UI_CompDrawDayNight.py  UI_CompDrawPollutionBar.py  UI_CurrentCond.py  UI_Forecast.py  UI_HourlyDetails.py  aboutWindow.py  application.css  backendAirPollution.py  backendCurrent_w.py  backendFindCity.py  backendForecast_w.py  backendWeather.py  backendWeatherDomoticz.py  backend_current_w.py  backend_forecast_w.py  config.py  constants.py  css.py  frontendCardAirPollution.py  frontendCardDayNight.py  frontendCardSquare.py  frontendCurrentCond.py  frontendForecast.py  frontendHourlyDetails.py  frontendUiDrawBar.py  frontendUiDrawDayNight.py  frontendUiDrawImageIcon.py  frontendUiDrawPollutionBar.py  frontendUiDrawbarLine.py  main.py  (+22 more)
src/css/: style.css
website/: README.md  index.html  package-lock.json  package.json  script.js  style.css  tailwind.config.js  vite.config.js
website/src/: App.jsx  index.css
website/src/components/: About.jsx  Button.jsx  Carousal.jsx  Contribute.jsx  CopyToClipboard.jsx  Features.jsx  FlatpakInstallation.jsx  Footer.jsx  Hero.jsx  ImageSlide.jsx  Installation.jsx  Navbar.jsx  OthersInstallation.jsx  SnapInstallation.jsx  Support.jsx
