application_id = 'io.github.amit9838.weather'

scalable_dir = join_paths('hicolor', 'scalable', 'apps')

install_data(
  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),
)
scalable_dir2 = join_paths('hicolor','scalable', 'weather_icons')

install_data(
	join_paths(scalable_dir2, 'clear-day.svg'),
	join_paths(scalable_dir2, 'clear-night.svg'),
	join_paths(scalable_dir2, 'cloudy.svg'),
	join_paths(scalable_dir2, 'drizzle.svg'),
	join_paths(scalable_dir2, 'fog.svg'),
	join_paths(scalable_dir2, 'fog-day.svg'),
	join_paths(scalable_dir2, 'fog-night.svg'),
	join_paths(scalable_dir2, 'haze.svg'),
	join_paths(scalable_dir2, 'overcast.svg'),
	join_paths(scalable_dir2, 'overcast-day.svg'),
	join_paths(scalable_dir2, 'overcast-day-fog.svg'),
	join_paths(scalable_dir2, 'overcast-day-rain.svg'),
	join_paths(scalable_dir2, 'overcast-day-smoke.svg'),
	join_paths(scalable_dir2, 'overcast-day-snow.svg'),
	join_paths(scalable_dir2, 'overcast-fog.svg'),
	join_paths(scalable_dir2, 'overcast-night.svg'),
	join_paths(scalable_dir2, 'overcast-night-fog.svg'),
	join_paths(scalable_dir2, 'overcast-night-rain.svg'),
	join_paths(scalable_dir2, 'overcast-night-snow.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-day-drizzle.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-day-fog.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-day-snow.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-night.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-night-fog.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-night-haze.svg'),
	join_paths(scalable_dir2, 'partly-cloudy-night-snow.svg'),
	join_paths(scalable_dir2, 'rain.svg'),
	join_paths(scalable_dir2, 'raindrop.svg'),
	join_paths(scalable_dir2, 'raindrops.svg'),
	join_paths(scalable_dir2, 'snow.svg'),
	join_paths(scalable_dir2, 'snowflake.svg'),
	join_paths(scalable_dir2, 'starry-night.svg'),
	join_paths(scalable_dir2, 'sunrise.svg'),
	join_paths(scalable_dir2, 'sunset.svg'),
	join_paths(scalable_dir2, 'thunderstorms-overcast-rain.svg'),
	join_paths(scalable_dir2, 'umbrella.svg'),
	join_paths(scalable_dir2, 'wind.svg'),
	join_paths(scalable_dir2, 'arrow.svg'),

	install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir2),

)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
