application_id = 'io.github.amit9838.weather'

scalable_dir = join_paths('hicolor', 'scalable', 'apps')

install_data(
  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),
)

scalable_dir = join_paths('hicolor','scalable', 'weather_icons')

install_data(
	  join_paths(scalable_dir, 'arrow.svg'),
    
	  join_paths(scalable_dir, 'clear-day.svg'),
    join_paths(scalable_dir, 'clear-night.svg'),
    join_paths(scalable_dir, 'partly-cloudy-day.svg'),
    join_paths(scalable_dir, 'drizzle.svg'),
    join_paths(scalable_dir, 'overcast-drizzle.svg'),
    join_paths(scalable_dir, 'partly-cloudy-day-drizzle.svg'),
    join_paths(scalable_dir, 'partly-cloudy-night-drizzle.svg'),
    join_paths(scalable_dir, 'partly-cloudy-night.svg'),
    join_paths(scalable_dir, 'overcast.svg'),
    join_paths(scalable_dir, 'overcast-day.svg'),
    join_paths(scalable_dir, 'overcast-night.svg'),
    join_paths(scalable_dir, 'fog.svg'),
    join_paths(scalable_dir, 'fog-day.svg'),
    join_paths(scalable_dir, 'fog-night.svg'),
    join_paths(scalable_dir, 'overcast-fog.svg'),
    join_paths(scalable_dir, 'overcast-day-fog.svg'),
    join_paths(scalable_dir, 'overcast-night-fog.svg'),
    join_paths(scalable_dir, 'partly-cloudy-day-fog.svg'),
    join_paths(scalable_dir, 'partly-cloudy-night-fog.svg'),
    join_paths(scalable_dir, 'rain.svg'),
    join_paths(scalable_dir, 'wind.svg'),
    join_paths(scalable_dir, 'raindrop.svg'),
    join_paths(scalable_dir, 'raindrops.svg'),
    join_paths(scalable_dir, 'overcast-rain.svg'),
    join_paths(scalable_dir, 'overcast-day-rain.svg'),
    join_paths(scalable_dir, 'overcast-night-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms-rain.svg'),
    join_paths(scalable_dir, 'partly-cloudy-day-rain.svg'),
    join_paths(scalable_dir, 'partly-cloudy-night-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms.svg'),
    join_paths(scalable_dir, 'thunderstorms-day-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms-night-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms-overcast-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms-day-overcast-rain.svg'),
    join_paths(scalable_dir, 'thunderstorms-night-overcast-rain.svg'),
    join_paths(scalable_dir, 'snow.svg'),
    join_paths(scalable_dir, 'snowflake.svg'),
    join_paths(scalable_dir, 'overcast-snow.svg'),
    join_paths(scalable_dir, 'overcast-day-snow.svg'),
    join_paths(scalable_dir, 'overcast-night-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-snow.svg'),
    join_paths(scalable_dir, 'partly-cloudy-day-snow.svg'),
    join_paths(scalable_dir, 'partly-cloudy-night-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-day-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-night-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-overcast-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-day-overcast-snow.svg'),
    join_paths(scalable_dir, 'thunderstorms-night-overcast-snow.svg'),

	install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),

)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
